<resources>
    <string name="key_autotune_last_run" translatable="false">key_autotune_last_run</string>
    <string name="dynisf_adjust_sensitivity">Enable TDD based sensitivity ratio for basal and glucose target modification</string>
    <string name="dynisf_adjust_sensitivity_summary">Uses the last 24h TDD/7D TDD to calculate sensitivity ratio used for increasing or decreasing basal rate, and also adjust glucose target if these options are enabled, in the same way Autosens does. It is recommended to start with this option turned off</string>
    <string name="dyn_isf_adjust_title" formatted="false">DynamicISF Adjustment Factor %</string>
    <string name="dyn_isf_adjust_summary" formatted="false">Adjustment factor for DynamicISF. Set more than 100% for more aggressive correction doses, and less than 100% for less aggressive corrections.</string>
    <string name="high_temptarget_raises_sensitivity_title">High temptarget raises sensitivity</string>
    <string name="high_temptarget_raises_sensitivity_summary"><![CDATA[Raise sensitivity for temptargets >= 100]]></string>
    <string name="low_temptarget_lowers_sensitivity_title">Low temptarget lowers sensitivity</string>
    <string name="low_temptarget_lowers_sensitivity_summary"><![CDATA[Lower sensitivity for temptargets < 100]]></string>
    <string name="openapssmb">OpenAPS SMB</string>
    <string name="openaps_smb_dynamic_isf">Dynamic ISF</string>
    <string name="openaps_auto_isf">Auto ISF</string>
    <string name="smb_interval_summary">How frequently SMBs will be given in min</string>
    <string name="resistance_lowers_target_title">Resistance lowers target</string>
    <string name="resistance_lowers_target_summary">When resistance is detected, lower the target glucose</string>
    <string name="sensitivity_raises_target_title">Sensitivity raises target</string>
    <string name="sensitivity_raises_target_summary">When sensitivity is detected, raise the target glucose</string>
    <string name="openapsma_disabled">Plugin is disabled</string>
    <string name="openapsma_no_glucose_data">No glucose data available</string>
    <string name="openaps_no_as_data">No autosens data available</string>
    <string name="dynisf_shortname">DYNISF</string>
    <string name="openapsama_use_autosens">Use Autosens feature</string>
    <string name="openapsma_max_basal_title">Max U/h a Temp Basal can be set to</string>
    <string name="openapsma_max_basal_summary">This value is called max basal in OpenAPS context</string>
    <string name="openapsama_max_daily_safety_multiplier_summary">Default value: 3 This is a key OpenAPS safety cap. What this does is limit your basals to be 3x (in this people) your biggest basal rate. You likely will not need to change this, but you should be aware that’s what is discussed about “3x max daily; 4x current” for safety caps.</string>
    <string name="openapsama_current_basal_safety_multiplier_summary">Default value: 4 This is the other half of the key OpenAPS safety caps, and the other half of “3x max daily; 4x current” of the safety caps. This means your basal, regardless of max basal set on your pump, cannot be any higher than this number times the current level of your basal. This is to prevent people from getting into dangerous territory by setting excessively high max basals before understanding how the algorithm works. Again, the default is 4x; most people will never need to adjust this and are instead more likely to need to adjust other settings if they feel like they are “running into” this safety cap.</string>
    <string name="openapsama_link_to_preference_json_doc_txt">Attention!\nNormally you do not have to change these values below. Please CLICK HERE and READ the text and make sure you UNDERSTAND it before change any of these values.</string>
    <string name="openapsama_link_to_preference_json_doc" translatable="false">http://openaps.readthedocs.io/en/latest/docs/walkthrough/phase-3/beyond-low-glucose-suspend.html</string>
    <string name="always_use_short_avg">Always use short average delta instead of simple delta</string>
    <string name="always_use_short_avg_summary">Useful when data from unfiltered sources like xDrip+ gets noisy.</string>
    <string name="openapsama_max_daily_safety_multiplier">Max daily safety multiplier</string>
    <string name="openapsama_current_basal_safety_multiplier">Current basal safety multiplier</string>
    <string name="openapssmb_max_iob_title">Maximum total IOB OpenAPS can\'t go over [U]</string>
    <string name="openapssmb_max_iob_summary">This value is called Max IOB in OpenAPS context\nOpenAPS will not add more insulin if current IOB is greater than this value</string>
    <string name="enable_uam">Enable UAM</string>
    <string name="enable_smb">Enable SMB</string>
    <string name="enable_smb_summary">Use Super Micro Boluses instead of temp basal for faster action</string>
    <string name="enable_uam_summary">Detection of Unannounced meals</string>
    <string name="enable_smb_always">Enable SMB always</string>
    <string name="enable_smb_always_summary">Enable SMB always independently to boluses. Possible only with BG source with nice filtering of data like G5</string>
    <string name="enable_smb_after_carbs">Enable SMB after carbs</string>
    <string name="enable_smb_after_carbs_summary">Enable SMB for 6h after carbs, even with 0 COB. Possible only with BG source with nice filtering of data like G5</string>
    <string name="enable_smb_with_cob">Enable SMB with COB</string>
    <string name="enable_smb_with_cob_summary">Enable SMB when there is COB active.</string>
    <string name="enable_smb_with_temp_target">Enable SMB with temp targets</string>
    <string name="enable_smb_with_temp_target_summary">Enable SMB when there is temp target active (eating soon, exercise)</string>
    <string name="enable_smb_with_high_temp_target">Enable SMB with high temp targets</string>
    <string name="enable_smb_with_high_temp_target_summary">Enable SMB when there is high temp target active (exercise, above 100 mg/dl or 5.5 mmol/l)</string>
    <string name="smb_max_minutes_summary">Max minutes of basal to limit SMB to</string>
    <string name="uam_smb_max_minutes">UAM SMB max minutes</string>
    <string name="uam_smb_max_minutes_summary">Max minutes of basal to limit SMB to for UAM</string>
    <string name="carbs_req_threshold">Minimum Carbs Required For Suggestion</string>
    <string name="carbs_req_threshold_summary">Minimum grams of carbs to display a carbs suggestion alert. Carbs suggestions below this number will not trigger a notification.</string>
    <string name="key_tsunami_settings" translatable="false">tsunami_settings</string>
    <string name="key_tsunami_smbcap" translatable="false">tsuSMBCap</string>
    <string name="tsunami_smbcap_title">Tsunami SMB cap [U]</string>
    <string name="tsunami_smbcap_summary">max SMB size deliverable by Tsunami.</string>
    <string name="key_insulinReqPCT" translatable="false">insulinReqPCT</string>
    <string name="insulinReqPCT_title">Tsunami insulin delivery percentage [%]</string>
    <string name="insulinReqPCT_summary">Reduces the calculated insulin required to the specified percentage for delivery. Example: If calculated insulin required is 1 U and fraction size is 50%, at most 0.5 U will be delivered if no other constraints (e.g. SMB caps) apply.</string>
    <string name="tsunami">Tsunami</string>
    <string name="tsunami_mode_settings_title" translatable="false">Tsunami mode settings</string>
    <string name="wave_mode_settings_title" translatable="false">Wave mode settings</string>
    <string name="key_enable_wave_mode" translatable="false">enable_wave_mode</string>
    <string name="enable_wave_mode_summary" translatable="false">Glucose watchdog to overrule the openAPSSMB algorithm within specified time slot if Tsunami mode is inactive.</string>
    <string name="enable_wave_mode_title" translatable="false">Enable wave mode</string>
    <string name="key_use_wave_smbcap" translatable="false">use_wave_smbcap</string>
    <string name="use_wave_smbcap_summary" translatable="false">Use fixed SMB cap instead of basal minutes as SMB size limiter.</string>
    <string name="use_wave_smbcap_title" translatable="false">Use SMB cap</string>
    <string name="key_wave_smbcap" translatable="false">wave_smbcap</string>
    <string name="wave_smbcap_message" translatable="false">max SMB size deliverable by wave mode.</string>
    <string name="wave_smbcap_title" translatable="false">Wave SMB cap [U]</string>
    <string name="key_wave_start" translatable="false">wave_start</string>
    <string name="wave_start_summary">Hour of the day from when on wave mode will be enabled.</string>
    <string name="wave_start_title">Wave start time (incl.) [h]</string>
    <string name="key_wave_end" translatable="false">wave_end</string>
    <string name="wave_end_summary">Hour of the day until (and including) which wave mode is enabled.</string>
    <string name="wave_end_title">Wave end time (incl.) [h]</string>
    <string name="key_wave_insulinReqPCT" translatable="false">waveinsulinReqPCT</string>
    <string name="wave_insulinReqPCT_message">Reduces the calculated insulin required to the specified percentage for delivery. Example: If calculated insulin required is 1 U and fraction size is 50%, at most 0.5 U will be delivered if no other constraints (e.g. SMB caps) apply.</string>
    <string name="wave_insulinReqPCT_title">Wave mode insulin delivery percentage [%]</string>
    <string name="key_tsu_SMB_scaling" translatable="false">tsu_SMB_scaling</string>
    <string name="tsu_SMB_scaling_title">Enable SMB cap scaling</string>
    <string name="tsu_SMB_scaling_summary">Scales Tsunami SMB cap with the current profile percentage (max: 130%).</string>
    <string name="key_wave_SMB_scaling" translatable="false">wave_SMB_scaling</string>
    <string name="wave_SMB_scaling_title">Enable SMB cap scaling</string>
    <string name="wave_SMB_scaling_summary">Scales Wave SMB cap with the current profile percentage (max: 130%).</string>
    <string name="key_advanced_tsunami" translatable="false">Advanced_tsunami_settings</string>
    <string name="advanced_tsunami_title">Advanced Tsunami settings</string>
    <string name="advanced_tsunami_disclaimer">The following settings are for experienced users only and do not have to be adjusted! New users are advised to use the default settings.</string>
    <string name="key_tsu_activity_target" translatable="false">tsu_activity_target</string>
    <string name="tsu_activity_target_title">Activity target (Tsunami) [%]</string>
    <string name="tsu_activity_target_summary">Percentage of current IA to maintain in case of small delta values (constant activity mode for Tsunami).</string>
    <string name="key_advanced_wave" translatable="false">Advanced_wave_settings</string>
    <string name="advanced_wave_title">Advanced Wave settings</string>
    <string name="advanced_wave_disclaimer">The following settings are for experienced users only and do not have to be adjusted! New users are advised to use the default settings.</string>
    <string name="key_wave_activity_target" translatable="false">wave_activity_target</string>
    <string name="wave_activity_target_title">Activity target (Wave) [%]</string>
    <string name="wave_activity_target_summary">Percentage of current IA to maintain in case of small delta values (constant activity mode for Wave).</string>
    <string name="tsunami_button_insulin_increment_button_message">Amount of insulin to add when button is pressed</string>
    <string name="tsunami_button_insulin_increment_2">2nd tsunami bolus increment [U]</string>
    <string name="tsunami_button_insulin_increment_3">3rd tsunami bolus increment [U]</string>
    <string name="tsunami_default_duration_message">Default Tsunami duration.</string>
    <string name="tsunami_default_duration_title">Tsunami default duration [min]</string>
</resources>