<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_tsunami_settings"
        android:title="@string/tsunami"
        app:initialExpandedChildrenCount="0">

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/openapsma_max_basal_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapsma_max_basal"
            android:title="@string/openapsma_max_basal_title"
            validate:floatmaxNumber="25.0"
            validate:floatminNumber="0.1"
            validate:testType="floatNumericRange" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="3"
            android:dialogMessage="@string/openapssmb_max_iob_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapssmb_max_iob"
            android:title="@string/openapssmb_max_iob_title"
            validate:floatmaxNumber="70.0"
            validate:floatminNumber="0"
            validate:testType="floatNumericRange" />

        <androidx.preference.PreferenceScreen
            android:key="tsunami_mode_settings"
            android:title="@string/tsunami_mode_settings_title">

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="1"
                android:dialogMessage="@string/tsunami_smbcap_summary"
                android:inputType="numberDecimal"
                android:key="@string/key_tsunami_smbcap"
                android:title="@string/tsunami_smbcap_title"
                validate:floatmaxNumber="3"
                validate:floatminNumber="0.1"
                validate:testType="floatNumericRange" />
            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_tsu_SMB_scaling"
                android:summary="@string/tsu_SMB_scaling_summary"
                android:title="@string/tsu_SMB_scaling_title" />
            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="0.5"
                android:dialogMessage="@string/tsunami_button_insulin_increment_button_message"
                android:inputType="numberDecimal|numberDecimal|numberSigned"
                android:key="@string/key_tsunami_button_insulin_increment_1"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/key_tsunami_button_insulin_increment_1"
                validate:floatmaxNumber="5.0"
                validate:floatminNumber="-5.0"
                validate:testType="floatNumericRange" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="1.0"
                android:dialogMessage="@string/tsunami_button_insulin_increment_button_message"
                android:inputType="numberDecimal|numberSigned"
                android:key="@string/key_tsunami_button_insulin_increment_2"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/tsunami_button_insulin_increment_2"
                validate:floatmaxNumber="5.0"
                validate:floatminNumber="-5.0"
                validate:testType="floatNumericRange" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="2.0"
                android:dialogMessage="@string/tsunami_button_insulin_increment_button_message"
                android:inputType="numberDecimal|numberSigned"
                android:key="@string/key_tsunami_button_insulin_increment_3"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/tsunami_button_insulin_increment_3"
                validate:floatmaxNumber="5.0"
                validate:floatminNumber="-5.0"
                validate:testType="floatNumericRange" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="0"
                android:dialogMessage="@string/tsunami_default_duration_message"
                android:inputType="numberSigned"
                android:key="@string/key_tsunami_default_duration"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/tsunami_default_duration_title"
                validate:maxNumber="300"
                validate:minNumber="0"
                validate:testType="numericRange" />

            <PreferenceCategory
                android:key="@string/key_advanced_tsunami"
                android:title="@string/advanced_tsunami_title">
                <Preference android:summary="@string/advanced_tsunami_disclaimer">
                </Preference>

                <info.nightscout.core.validators.ValidatingEditTextPreference
                    android:key="@string/key_tsu_activity_target"
                    android:title="@string/tsu_activity_target_title"
                    android:dialogMessage="@string/tsu_activity_target_summary"
                    android:defaultValue="75"
                    validate:floatmaxNumber="100"
                    validate:floatminNumber="50"
                    android:inputType="numberDecimal"
                    validate:testType="floatNumericRange" />
            </PreferenceCategory>

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="65"
                android:dialogMessage="@string/insulinReqPCT_summary"
                android:inputType="numberDecimal"
                android:key="@string/key_insulinReqPCT"
                android:title="@string/insulinReqPCT_title"
                validate:floatmaxNumber="100"
                validate:floatminNumber="50"
                validate:testType="floatNumericRange" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen
            android:key="wave_mode_settings"
            android:title="@string/wave_mode_settings_title">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_enable_wave_mode"
                android:summary="@string/enable_wave_mode_summary"
                android:title="@string/enable_wave_mode_title" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:dependency="@string/key_enable_wave_mode"
                android:defaultValue="11"
                android:dialogMessage="@string/wave_start_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_wave_start"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/wave_start_title"
                validate:floatmaxNumber="23"
                validate:floatminNumber="0"
                validate:testType="floatNumericRange" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:dependency="@string/key_enable_wave_mode"
                android:defaultValue="21"
                android:dialogMessage="@string/wave_end_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_wave_end"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/wave_end_title"
                validate:floatmaxNumber="23"
                validate:floatminNumber="0"
                validate:testType="floatNumericRange" />

            <SwitchPreference
                android:dependency="@string/key_enable_wave_mode"
                android:defaultValue="false"
                android:key="@string/key_use_wave_smbcap"
                android:summary="@string/use_wave_smbcap_summary"
                android:title="@string/use_wave_smbcap_title" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:dependency="@string/key_use_wave_smbcap"
                android:defaultValue="0.5"
                android:dialogMessage="@string/wave_smbcap_message"
                android:digits="0123456789.,"
                android:inputType="numberDecimal"
                android:key="@string/key_wave_smbcap"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/wave_smbcap_title"
                validate:floatmaxNumber="2"
                validate:floatminNumber="0"
                validate:testType="floatNumericRange" />

            <SwitchPreference
                android:dependency="@string/key_use_wave_smbcap"
                android:defaultValue="false"
                android:key="@string/key_wave_SMB_scaling"
                android:summary="@string/wave_SMB_scaling_summary"
                android:title="@string/wave_SMB_scaling_title" />

            <PreferenceCategory
                android:dependency="@string/key_enable_wave_mode"
                android:key="@string/key_advanced_wave"
                android:title="@string/advanced_wave_title">
                <Preference android:summary="@string/advanced_wave_disclaimer">
                </Preference>

                <info.nightscout.core.validators.ValidatingEditTextPreference
                    android:dependency="@string/key_enable_wave_mode"
                    android:key="@string/key_wave_activity_target"
                    android:title="@string/wave_activity_target_title"
                    android:dialogMessage="@string/wave_activity_target_summary"
                    android:defaultValue="50"
                    validate:floatmaxNumber="100"
                    validate:floatminNumber="50"
                    android:inputType="numberDecimal"
                    validate:testType="floatNumericRange" />

                <info.nightscout.core.validators.ValidatingEditTextPreference
                    android:dependency="@string/key_enable_wave_mode"
                    android:defaultValue="65"
                    android:dialogMessage="@string/wave_insulinReqPCT_message"
                    android:inputType="numberDecimal"
                    android:key="@string/key_wave_insulinReqPCT"
                    android:title="@string/wave_insulinReqPCT_title"
                    validate:floatmaxNumber="100"
                    validate:floatminNumber="30"
                    validate:testType="floatNumericRange" />
            </PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_autosens"
            android:title="@string/openapsama_use_autosens" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_smb"
            android:summary="@string/enable_smb_summary"
            android:title="@string/enable_smb" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_allowSMB_with_high_temptarget"
            android:summary="@string/enable_smb_with_high_temp_target_summary"
            android:title="@string/enable_smb_with_high_temp_target" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_always"
            android:summary="@string/enable_smb_always_summary"
            android:title="@string/enable_smb_always" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_COB"
            android:summary="@string/enable_smb_with_cob_summary"
            android:title="@string/enable_smb_with_cob" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_temptarget"
            android:summary="@string/enable_smb_with_temp_target_summary"
            android:title="@string/enable_smb_with_temp_target" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_after_carbs"
            android:summary="@string/enable_smb_after_carbs_summary"
            android:title="@string/enable_smb_after_carbs" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="3"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_smb_interval"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/smb_interval_summary"
            validate:maxNumber="10"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="30"
            android:digits="0123456789"
            android:entries="@array/smbMaxMinutes"
            android:entryValues="@array/smbMaxMinutes"
            android:inputType="number"
            android:key="@string/key_smb_max_minutes"
            android:title="@string/smb_max_minutes_summary"
            validate:maxNumber="200"
            validate:minNumber="15"
            validate:testType="numericRange" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="30"
            android:dialogMessage="@string/uam_smb_max_minutes"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_uam_smb_max_minutes"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/uam_smb_max_minutes_summary"
            validate:maxNumber="200"
            validate:minNumber="15"
            validate:testType="numericRange" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_uam"
            android:summary="@string/enable_uam_summary"
            android:title="@string/enable_uam" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_sensitivity_raises_target"
            android:summary="@string/sensitivity_raises_target_summary"
            android:title="@string/sensitivity_raises_target_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_resistance_lowers_target"
            android:summary="@string/resistance_lowers_target_summary"
            android:title="@string/resistance_lowers_target_title" />
        <!-- TODO AS-FIX -->
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_high_temptarget_raises_sensitivity"
            android:summary="@string/high_temptarget_raises_sensitivity_summary"
            android:title="@string/high_temptarget_raises_sensitivity_title" />

        <!-- TODO AS-FIX -->
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_low_temptarget_lowers_sensitivity"
            android:summary="@string/low_temptarget_lowers_sensitivity_summary"
            android:title="@string/low_temptarget_lowers_sensitivity_title" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/carbs_req_threshold_summary"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_carbsReqThreshold"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/carbs_req_threshold_summary"
            android:title="@string/carbs_req_threshold"
            validate:maxNumber="10"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <androidx.preference.PreferenceScreen
            android:key="absorption_smb_advanced"
            android:title="@string/advanced_settings_title">

            <Preference android:summary="@string/openapsama_link_to_preference_json_doc_txt">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/openapsama_link_to_preference_json_doc" />
            </Preference>

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_always_use_shortavg"
                android:summary="@string/always_use_short_avg_summary"
                android:title="@string/always_use_short_avg" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="3"
                android:dialogMessage="@string/openapsama_max_daily_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_max_daily_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:title="@string/openapsama_max_daily_safety_multiplier"
                validate:maxNumber="10"
                validate:minNumber="1"
                validate:testType="numericRange" />

            <info.nightscout.core.validators.ValidatingEditTextPreference
                android:defaultValue="4"
                android:dialogMessage="@string/openapsama_current_basal_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_current_basal_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/openapsama_current_basal_safety_multiplier"
                validate:floatmaxNumber="10"
                validate:floatminNumber="1"
                validate:testType="floatNumericRange" />

        </androidx.preference.PreferenceScreen>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
